--- a/inventories/group_vars/windows.yml
+++ b/inventories/group_vars/windows.yml
@@ -3,3 +3,9 @@ parameters: /SSHServerFeature
 service_name: SSHD
 local_port: 22
 protocol_name: tcp
+
+user_info:
+  - { name: 'james', firstname: 'James', surname: 'Jockey', password: 'redhat@123', group_name: 'dev', group_scope: 'domainlocal'}
+  - { name: 'bill', firstname: 'Bill', surname: 'Gates', password: 'redhat@123', group_name: 'dev', group_scope: 'domainlocal'}
+  - { name: 'mickey', firstname: 'Mickey', surname: 'Mouse', password: 'redhat@123', group_name: 'qa', group_scope: 'domainlocal'}
+  - { name: 'donald', firstname: 'Donald', surname: 'Duck', password: 'redhat@123', group_name: 'qa', group_scope: 'domainlocal'}
